--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
   <!-- Keywords -->
   <meta name="keywords"
     content="SyllabusQuiz, AI quiz generator, MCQ maker, generate questions from syllabus, online test creator, AI quiz, multiple choice questions, educational quiz, smart exam prep, unit-wise questions, create custom quizzes, syllabus-based quiz, chapter-wise MCQ, generate quiz from topic, quiz from syllabus, AI for education, custom difficulty quiz, study smarter, student exam preparation, interactive quizzes">
+
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8452146197004922"
+    crossorigin="anonymous"></script>
   <!-- Author -->
   <meta name="author" content="SyllabusBuddy Team">
   <link rel="canonical" href="https://syllabusquiz.onrender.com/">
