--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,19 @@
     </div>
   </header>
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8452146197004922"
+     crossorigin="anonymous"></script>
+<!-- Homepage-Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8452146197004922"
+     data-ad-slot="6338845850"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+  
   <div class="container">
     <h1 class="main-title">AI Quiz Generator - Create Tests & Quizzes Online</h1>
 
@@ -93,7 +106,19 @@
       <pre id="output">Your quiz will appear here...</pre>
     </div>
   </div>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8452146197004922"
+     crossorigin="anonymous"></script>
+<!-- Homepage-Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8452146197004922"
+     data-ad-slot="6338845850"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+  
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-logo">
