--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
 
   <header class="navbar">
     <div class="nav-left">
-      <img src="{{ url_for('static', filename='logo.png') }}" alt="SyllabusQuiz" class="nav-icon">
+      <img src="{{ url_for('static', filename='logo.png') }}" alt="SyllabusQuiz-logo" class="nav-icon">
       <div class="logo">SyllabusQuiz</div>
     </div>
   </header>
