--- a/templates/index.html
+++ b/templates/index.html
@@ -89,8 +89,7 @@
 
     <div class="card">
       <h2>Quiz Output</h2>
-      <pre id="output">❌ Error contacting server: Unexpected token '&lt;', "&lt;html&gt;
-  &lt;"... is not valid JSON</pre>
+      <pre id="output">Quiz Will be here..</pre>
     </div>
   </div>
 
